@@ -94,18 +94,6 @@ public interface HRegionInterface extends VersionedProtocol {
   throws IOException;
 
   /**
-   * Get all the data for the specified row at a given timestamp
-   * 
-   * @param regionName region name
-   * @param row row key
-   * @return map of values
-   * @throws IOException
-   */
-  public RowResult getRow(final byte [] regionName, final byte [] row,
-    final long ts)
-  throws IOException;
-
-  /**
    * Return all the data for the row that matches <i>row</i> exactly, 
    * or the one that immediately preceeds it.
    * 
@@ -128,18 +116,6 @@ public interface HRegionInterface extends VersionedProtocol {
    */
   public RowResult getRow(final byte [] regionName, final byte [] row, 
     final byte[][] columns, final long ts)
-  throws IOException;
-
-  /**
-   * Get selected columns for the specified row at the latest timestamp.
-   * 
-   * @param regionName region name
-   * @param row row key
-   * @return map of values
-   * @throws IOException
-   */
-  public RowResult getRow(final byte [] regionName, final byte [] row, 
-    final byte[][] columns)
   throws IOException;
 
   /**
